Improve performance plain-text generation GET /blocks